# dfki-quad

./: .clang-format  .gitignore  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  README.md  build_new_image.sh  manifest.xml  new_docker_shell.sh  reset_docker_container.sh  run_docker.sh
ws/src/common/: CMakeLists.txt  package.xml
ws/src/common/config/: controllers  drivers  simulator  state_estimation
ws/src/common/include/common/: Interpolate.hpp  custom_qos.hpp  eigen_msg_conversions.hpp  eigen_util.hpp  filters.hpp  model_interface.hpp  quad_model.hpp  quad_model_symbolic.hpp  quad_state.hpp  quaternion_operations.hpp  sequence_containers.hpp  state_interface.hpp
ws/src/common/launch/: hardware.launch.py  simulation.launch.py
ws/src/common/model/urdf/: OLD_quad.urdf  brick.urdf  dfki-quad.gv  plane.urdf  quad.urdf  terrain.urdf
ws/src/common/scripts/: launch_controller.sh  launch_hardware.sh  plot_cost_of_transport.py  plot_trajectory_bagfile.py  record_experiment.sh
ws/src/common/src/: quad_model.cpp  quad_model_symbolic.cpp  quad_state.cpp
ws/src/common/src/tests/: model_test.cpp  test.cpp
ws/src/controllers/: CMakeLists.txt  package.xml
ws/src/controllers/config/: cpu_power_logging.yaml  mit_controller_real_go2.yaml  mit_controller_real_ulab.yaml  mit_controller_sim_go2.yaml  mit_controller_sim_ulab.yaml  quad_stand_up_real_go2.yaml  quad_stand_up_real_ulab.yaml  quad_stand_up_sim_go2.yaml  quad_stand_up_sim_ulab.yaml  sys_id_go2.yaml  sys_id_ulab.yaml  trajectory_replay_real.yaml  trajectory_replay_sim.yaml
ws/src/controllers/include/: SwingTrajectory.hpp  csv.hpp  mit_controller_node.hpp
ws/src/controllers/include/mit_controller/: adaptive_gait_sequencer.hpp  bio_gait_sequencer.hpp  feet_targets.hpp  gait.hpp  gait_interface.hpp  gait_sequence.hpp  gait_sequence_to_msg.hpp  gait_sequencer_interface.hpp  gait_sequencer_types.hpp  inverse_dynamics.hpp  joint_commands.hpp  mit_controller_params.hpp  mpc.hpp  mpc_interface.hpp  mpc_prediction.hpp  mpc_trajectory_planner.hpp  raibert_foot_step_planner.hpp  simple_gait_sequencer.hpp  swing_leg_controller.hpp  swing_leg_controller_interface.hpp  target.hpp  wbc_arc_opt.hpp  wbc_interface.hpp  wrench_sequence.hpp
ws/src/controllers/include/model_adaptation/: least_squares_model_adaptation.hpp  model_adaptation_interface.hpp  passivity_based_model_adaptation.hpp
ws/src/controllers/include/potato_sim/: forces_visualizer.hpp  positions_visualizer.hpp  potato_model.hpp  potato_sim.hpp
ws/src/controllers/include/system_identification/: SysIDTrajectory.hpp
ws/src/controllers/include/tools/: log_cpu_power.hpp  plot_gs.hpp  plotting.hpp
ws/src/controllers/launch/: leg_sys_id.launch.py  mit_controller.launch.py  quad_stand_up.launch.py  trajectory_replay.launch.py
ws/src/controllers/scripts/: joy_to_target.py  quad_stand_up.py
ws/src/controllers/src/: SwingTrajectory.cpp  mit_controller_node.cpp  quad_linear_matrices.cpp  testSwingTrajectoryControllerNode.cpp  trajectory_replay.cpp
ws/src/controllers/src/mit_controller/: adaptive_gait_sequencer.cpp  bio_gait_sequencer.cpp  gait.cpp  inverse_dynamics.cpp  mit_controller.cpp  mpc.cpp  mpc_trajectory_planner.cpp  raibert_foot_step_planner.cpp  simple_gait_sequencer.cpp  swing_leg_controller.cpp  wbc_arc_opt.cpp
ws/src/controllers/src/potato_sim/: forces_vizualiser.cpp  potato_model.cpp  (+2 more)
ws/src/controllers/trajectories/: all_zero.csv  backflip_contact_frameCorrected_ros2_interp400.csv  backflip_contact_frameCorrected_ros2_interp500.csv  backflip_contact_frameCorrected_ros2_interp600.csv  flip_traj_axis.py  planarProblemSaltoForward17032023_frameCorrected_interp.csv  simple_cartesian.csv  simple_traj.csv  single_leg_sin.csv  traj_lasse_500Hz.csv  traj_lasse_original.csv
ws/src/drivers/: CMakeLists.txt  package.xml
ws/src/drivers/config/: contact_sensor_ulab.yaml  imu_param.yaml  leg_param_real_go2.yaml  leg_param_real_ulab.yaml  leg_param_sim.yaml  mjbots_params.yaml  mjbots_test_params.yaml  test_params.yaml  unitree_go2_param.yaml
ws/src/drivers/launch/: leg_driver_launch.py  mjbots_ros2_motor_driver.launch.py  test_abstract_driver.launch.py  unitree_ros2_motor_driver.launch.py
ws/src/drivers/scripts/: conf_new  conf_old  conf_old_newbox  info.sh  shutdown.sh  zero_all_legs.sh  zero_bl_leg.sh  zero_br_leg.sh  zero_fl_leg.sh  zero_fr_leg.sh
ws/src/drivers/src/: abstract_motor_driver.cpp  contact_sensor_driver.cpp  leg_driver.cpp  mjbots_ros2_motor_driver.cpp  test_abstract_motor_driver.cpp  unitree_ros2_motor_driver.cpp
ws/src/interfaces/: CMakeLists.txt  package.xml
ws/src/interfaces/msg/: BatteryState.msg  ContactState.msg  ControllerInfo.msg  GaitSequence.msg  GaitState.msg  JointCmd.msg  JointState.msg  LegCmd.msg  MPCDiagnostics.msg  PositionSequence.msg  QuadControlTarget.msg  QuadModel.msg  QuadState.msg  SimulationDisturbance.msg  TrajectoryStatus.msg  VectorSequence.msg  WBCReturn.msg  WBCTarget.msg
ws/src/interfaces/srv/: ChangeLegDriverMode.srv  DisturbSim.srv  KeepJointPositions.srv  ResetSimulation.srv  StepSimulation.srv  ZeroMotors.srv
ws/src/simulator/: CMakeLists.txt  package.xml
ws/src/simulator/config/: simulator_params_go2.yaml  simulator_params_ulab.yaml  visualizer_params_go2.yaml  visualizer_params_ulab.yaml
ws/src/simulator/include/: drake_converter.hpp  drake_simulator.hpp  pd_changeable_controller.hpp  ros_publisher.hpp  ros_spinner.hpp
ws/src/simulator/launch/: simulator.launch.py  visualizer.launch.py
ws/src/simulator/src/: disturbance_node.cpp  drake_simulator.cpp  drake_visualizer.cpp  pd_changeable_controller.cpp
ws/src/state_estimation/: CMakeLists.txt  package.xml
ws/src/state_estimation/config/: state_estimation_go2_real.yaml  state_estimation_go2_sim.yaml  state_estimation_ulab.yaml
ws/src/state_estimation/include/: contact_detection.hpp  kalman_filter.hpp  state_estimation_node.hpp
ws/src/state_estimation/launch/: state_estimation.launch.py
ws/src/state_estimation/scripts/: kalman_from_imu.py
ws/src/state_estimation/src/: contact_detection.cpp  kalman_filter.cpp  state_estimation_node.cpp
(+275 files in other folders)
